--- a/VRChat/24/1253924.html
+++ b/VRChat/24/1253924.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/d4c0d5357203fd37a6c0.js" defer=
     "defer" nonce=
-    "ICwFbqNAS8vW9ThSBSIwY67y0E4owIvMCfE1//gh0ek="></script>
+    "pCHegRzV6rgOpFOy4k7l/XWfyBm1YsMMvM34/NzwQEM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3D逆関節陸戦メカモデル[MB-G-30]","description":"□オリジナル3Dメカモデル　MB-G-30\n製作者：サークル麻婆弾　ヴィジ(ap1895)\n18904△ポリゴン。(Ver1.0)\nunityHumanoid対応。\n\n□内容\n・MB-G-30E.unitypackage　本体\n\n・MB-G-30E.fbx　本体\n\n・Averina_Avatar.vrm VRM本体\n\n・texフォルダ　テクスチャ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートして下さい。\n\nunitypackage版をインポートする際は、UnityChanToonShader2.0.5及びVRCSDKの最新版を予めプロジェクトにインポートした上で\n本アバターのunitypackageをインポートして下さい。\nDynamicBoneを使用する場合は同様に事前にインポートを行って下さい。\n\nunityにインポート後のファイルはAsset/MBG30フォルダ内に生成されます。\n\n\n\n\n□利用規約\n\n・本モデルデータの著作権は製作者ヴィジに帰属します。\n\n・改変・改造は自由に可能です。R-18/R-18Gも可。\n\n・政治的、宗教的、誹謗中傷目的での利用を禁じます。\n\n・元モデルデータ、改変データを再配布・再利用可能な状態で公開する事を禁じます。\n\n・VRCなどのプラットフォーム上にて、アバターペデスタル等の購入者以外の不特定多数が利用できる状態や、public設定でのアバターアップロードを禁じます。\n\n・本モデルの購入者は営利活動での利用が可能です。\n\n・本モデルの利用によるトラブル・損失等に製作者は一切の責任を負いません。\n\n\n□更新履歴\n\n2019/3/01　販売開始\n\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nVRChat：AP1895\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/1253924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1253924/4e51f5e3-5a82-45fc-9526-ea5adf4fec8a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ICwFbqNAS8vW9ThSBSIwY67y0E4owIvMCfE1//gh0ek="></script>
+    nonce="pCHegRzV6rgOpFOy4k7l/XWfyBm1YsMMvM34/NzwQEM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -579,7 +579,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;},{&quot;label&quot;:&quot;超COMIC CITY ONLINE-230825-&quot;,&quot;value&quot;:&quot;comiccity-online-230825&quot;}]"
+    "[{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
